# arubacentralcaas

./: .gitignore  Pipfile  README.md  ac_cookie.py  app.py  caas  caastokens.py  central_config.py.example  cookie.json  example1.json  example3.json  pyproject.toml  requirements.txt  show_committed.py  test.sh
arubacentralcaas/: LICENSE.txt  README.md  __init__.py  app.py
arubacentralcaas/.cache/: .gitignore  caascache.json
arubacentralcaas/config/: .gitignore  settings.py
arubacentralcaas/deprecated/: caas.py  caastokens.py  old_README.md  show_committed.py  token.json.sample
arubacentralcaas/deprecated/cookie_version/: central_config.py.example
arubacentralcaas/model/: push_config.py  shows.py  tests.py
arubacentralcaas/samples/: example4.json
arubacentralcaas/tests/: runner.py  test_app.py
arubacentralcaas/tests/resources/: test_show_effective.json
arubacentralcaas/views/: displays.py  outputs.py
config/: .gitignore
cookie_version/: caascookies.py
deprecated/cookie_version/: README.md
lib/: getapi.py
pycentral/: base.py
samples/: example1.json  example2.json
tests/resources/: test_get_gateways.json  test_show_committed.json
