[tool.poetry]
name = "arubacentralcaas"
version = "0.1.5"
description = "Aruba Central CaaS API CLI"
authors = ["Michael Rose Jr. <michael@michaelrosejr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pycentral = "^0.0.3"
rich = "^12.3.0"
typer = "^0.4.1"
ipaddress = "^1.0.23"
pydantic = "^1.9.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"

[tool.black]
line-length = 120
include = "\\.pyi?$"
exclude = "/(\n    \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.poetry.scripts]
caas = "arubacentralcaas.app:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
